small tag change

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	</div> -->
 
 	<div class="graphs">
-		<svg id="legend"></svg>
+		<svg id="legend"/>
 		<svg id="line-chart"/>
 		<!-- <svg id="correlation-chart"/> -->
 		<svg id="bar-chart"/>
